unpackaged/main/default/objects/Metric_Definition__c/Metric_Definition__c.object-meta.xml
<CustomObject>
    <label>Metric Definition</label>
    <nameField>
        <label>Metric Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Metric Definitions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>