unpackaged/main/default/objects/Metric_Definition__c/fields/Attribute__c.field-meta.xml
<CustomField>
    <fullName>Attribute__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Attribute</label>
    <referenceTo>Core_Attribute__c</referenceTo>
    <relationshipLabel>Metric Definitions</relationshipLabel>
    <relationshipName>Metric_Definitions</relationshipName>
    <type>Lookup</type>
</CustomField>