unpackaged/main/default/objects/Metric_Definition__c/fields/Base_Asset_Template__c.field-meta.xml
<CustomField>
    <fullName>Base_Asset_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Base Asset Template</label>
    <referenceTo>Base_Asset_Template__c</referenceTo>
    <relationshipLabel>Metric Definitions</relationshipLabel>
    <relationshipName>Metric_Definitions</relationshipName>
    <type>Lookup</type>
</CustomField>