unpackaged/main/default/objects/Metric_Definition__c/fields/Dev_Metric_Definition_Id__c.field-meta.xml
<CustomField>
    <fullName>Dev_Metric_Definition_Id__c</fullName>
    <label>Dev Metric Definition Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>