unpackaged/main/default/objects/Metric_Definition__c/fields/Modifer_1__c.field-meta.xml
<CustomField>
    <fullName>Modifer_1__c</fullName>
    <label>Modifer 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SUM</fullName>
            </value>
            <value>
                <fullName>COUNT</fullName>
            </value>
            <value>
                <fullName>AVG</fullName>
            </value>
            <value>
                <fullName>MAX</fullName>
            </value>
            <value>
                <fullName>MIN</fullName>
            </value>
            <value>
                <fullName>VALUES</fullName>
            </value>
            <value>
                <fullName>CONSTANT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>