unpackaged/main/default/objects/Metric_Definition__c/fields/Modifer_2__c.field-meta.xml
<CustomField>
    <fullName>Modifer_2__c</fullName>
    <label>Modifer 2</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Modifer_1__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NULL</fullName>
            </value>
            <value>
                <fullName>TOTAL</fullName>
            </value>
            <value>
                <fullName>UNIQUE</fullName>
            </value>
            <value>
                <fullName>VALUE</fullName>
            </value>
            <value>
                <fullName>NUMBER</fullName>
            </value>
            <value>
                <fullName>TEXT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>