unpackaged/main/default/objects/Metric_Definition__c/fields/Modifer_2_Value__c.field-meta.xml
<CustomField>
    <fullName>Modifer_2_Value__c</fullName>
    <label>Modifer 2 Value</label>
    <length>18</length>
    <type>Text</type>
</CustomField>