unpackaged/main/default/objects/Metric_Definition__c/fields/TEM_Version__c.field-meta.xml
<CustomField>
    <fullName>TEM_Version__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TEM Version</label>
    <referenceTo>TEM_Version__c</referenceTo>
    <relationshipLabel>Metric Definitions</relationshipLabel>
    <relationshipName>Metric_Definitions</relationshipName>
    <type>Lookup</type>
</CustomField>