unpackaged/main/default/objects/Metric_Definition__c/recordTypes/Constants.recordType-meta.xml
<RecordType>
    <fullName>Constants</fullName>
    <active>true</active>
    <description>Constants for Evaluation</description>
    <label>Constants</label>
</RecordType>