unpackaged/main/default/objects/Metric_Definition__c/recordTypes/Definition.recordType-meta.xml
<RecordType>
    <fullName>Definition</fullName>
    <active>true</active>
    <description>Definition for Metric and Evaluation</description>
    <label>Definition</label>
</RecordType>