unpackaged/main/default/objects/Metric_Definition__c/validationRules/Count_of_Values_in_modifier_2.validationRule-meta.xml
<ValidationRule>
    <fullName>Count_of_Values_in_modifier_2</fullName>
    <active>true</active>
    <description>When &quot;Modifier 1&quot; is count and &quot;Modifier 2&quot; is Value, then Modifier 2 Value should not be empty.</description>
    <errorConditionFormula>AND(ISPICKVAL(Modifer_1__c, &#39;COUNT&#39;),
ISPICKVAL(Modifer_2__c , &#39;VALUE&#39;),
ISBLANK(Modifer_2_Value__c)
)</errorConditionFormula>
    <errorDisplayField>Modifer_2_Value__c</errorDisplayField>
    <errorMessage>Cannot be empty when Modifier 2 has &#39;VALUE&#39;</errorMessage>
</ValidationRule>