unpackaged/main/default/objects/Metric_Definition__c/validationRules/Modifier_2_is_should_not_be_null.validationRule-meta.xml
<ValidationRule>
    <fullName>Modifier_2_is_should_not_be_null</fullName>
    <active>true</active>
    <description>Modifier 2 should not be null when &quot;COUNT&quot; is selected as Modifier 1</description>
    <errorConditionFormula>AND(ISPICKVAL(Modifer_1__c,&#39;COUNT&#39;),
ISPICKVAL(Modifer_2__c,&#39;&#39;))</errorConditionFormula>
    <errorDisplayField>Modifer_2__c</errorDisplayField>
    <errorMessage>Cannot be null, when Modifier 1 is COUNT</errorMessage>
</ValidationRule>