unpackaged/main/default/objects/Metric_Definition__c/validationRules/Record_type_mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Record_type_mandatory</fullName>
    <active>true</active>
    <description>To validate the record type is not empty</description>
    <errorConditionFormula>ISBLANK( RecordTypeId )</errorConditionFormula>
    <errorMessage>Record type is mandatory</errorMessage>
</ValidationRule>