unpackaged/main/default/objects/Metric_Definition__c/validationRules/Required_fields_based_on_constants_RT.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_fields_based_on_constants_RT</fullName>
    <active>true</active>
    <description>To validate the required field for constant record type</description>
    <errorConditionFormula>AND(RecordType.DeveloperName == &#39;Constants&#39;,OR(ISPICKVAL( Modifer_1__c , &quot;&quot;),ISPICKVAL( Modifer_2__c , &quot;&quot;),ISBLANK( Modifer_2_Value__c)))</errorConditionFormula>
    <errorMessage>The fields or columns Modifier 1, Modifier 2 and Modifier 2 Value are mandatory for constants record type</errorMessage>
</ValidationRule>