unpackaged/main/default/objects/Metric_Definition__c/validationRules/Validate_Modifier_2_Value_based_on_Modif.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Modifier_2_Value_based_on_Modif</fullName>
    <active>true</active>
    <description>Validate Modifier 2 Value based on Modifier 2</description>
    <errorConditionFormula>OR(AND(ISPICKVAL( Modifer_2__c , &#39;Text&#39;), NOT(ISBLANK(Modifer_2_Value__c)),OR( NOT( REGEX( Modifer_2_Value__c, &quot;[a-zA-Z0-9]+&quot;)) ,ISNUMBER(Modifer_2_Value__c))),
AND(ISPICKVAL( Modifer_2__c , &#39;NUMBER&#39;), NOT(ISBLANK(Modifer_2_Value__c)),OR( NOT( ISNUMBER(Modifer_2_Value__c) ),AND(NOT(REGEX(Modifer_2_Value__c, &quot;[0-9]+[.]{1}{1}[0-9]{2}&quot;)),NOT(REGEX(Modifer_2_Value__c, &quot;[0-9]+[.]{1}{1}[0-9]{1}&quot;)),NOT(REGEX(Modifer_2_Value__c, &quot;[0-9]+{1}{1}[0-9]{0}&quot;)),NOT(REGEX(Modifer_2_Value__c, &quot;-[0-9]+[.]{1}{1}[0-9]{2}&quot;)),NOT(REGEX(Modifer_2_Value__c, &quot;-[0-9]+[.]{1}{1}[0-9]{1}&quot;)),NOT(REGEX(Modifer_2_Value__c, &quot;-[0-9]+{1}{1}[0-9]{0}&quot;)) ))))</errorConditionFormula>
    <errorDisplayField>Modifer_2_Value__c</errorDisplayField>
    <errorMessage>If Modifier 2 is &#39;Number&#39;, can have only Numbers with 2 decimal point, if Modifier 2 is &#39;Text&#39;, can have Alpha-numeric without special characters</errorMessage>
</ValidationRule>