unpackaged/main/default/objects/Metric_Definition__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Attribute__c</columns>
    <columns>Base_Asset_Template__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>